--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  list: MyString
-  ratings: 1
+  content: MyText
+  rating: 1
+  restaurant: one
 
 two:
-  list: MyString
-  ratings: 1
+  content: MyText
+  rating: 1
+  restaurant: two
